--- a/src/CheeseMVC/Views/Cheese/Add.cshtml
+++ b/src/CheeseMVC/Views/Cheese/Add.cshtml
@@ -1,6 +1,8 @@
-﻿<h1>Add Cheese</h1>
+﻿@model CheeseMVC.ViewModels.AddCheeseViewModel
 
-<form method="post">
+<h1>Add Cheese</h1>
+
+<form asp-controller="Cheese" asp-action="Add" method="post">
 
     <div class="form-group">
         <label for="name">Name</label>
