--- a/src/CheeseMVC/Views/Cheese/Index.cshtml
+++ b/src/CheeseMVC/Views/Cheese/Index.cshtml
@@ -1,6 +1,8 @@
-﻿<h1>@ViewBag.Title</h1>
+﻿@model List<CheeseMVC.Models.Cheese>
 
-@if (ViewBag.cheeses.Count == 0)
+<h1>@ViewBag.Title</h1>
+
+@if (Model.Count == 0)
 {
     <p>No cheeses yet!</p>
 }
@@ -12,7 +14,7 @@
         <th>Description</th>
     </tr>
 
-    @foreach (var cheese in ViewBag.cheeses)
+    @foreach (var cheese in Model)
     {
         <tr>
             <td>@cheese.Name</td>
