--- a/src/CheeseMVC/Views/Cheese/Index.cshtml
+++ b/src/CheeseMVC/Views/Cheese/Index.cshtml
@@ -12,6 +12,7 @@
     <tr>
         <th>Name</th>
         <th>Description</th>
+        <td>Type</td>
     </tr>
 
     @foreach (var cheese in Model)
@@ -19,6 +20,7 @@
         <tr>
             <td>@cheese.Name</td>
             <td>@cheese.Description</td>
+            <td>@cheese.Type</td>
         </tr>
     }
 </table>
