--- a/src/CheeseMVC/Views/Menu/Add.cshtml
+++ b/src/CheeseMVC/Views/Menu/Add.cshtml
@@ -1,6 +1,8 @@
-﻿@model CheeseMVC.ViewModels.AddCheeseViewModel
+﻿@model CheeseMVC.ViewModels.AddMenuViewModel
 
-<h1>Add Cheese</h1>
+@{
+    ViewBag.Title = "New Menu";
+}
 
 <form asp-controller="Menu" asp-action="Add" method="post">
 
@@ -14,5 +16,3 @@
     <input type="submit" value="Add Menu" />
 
 </form>
-@{
-}
