--- a/src/CheeseMVC/Views/Menu/Index.cshtml
+++ b/src/CheeseMVC/Views/Menu/Index.cshtml
@@ -23,4 +23,4 @@
     }
 </table>
 
-<p><a asp-controller="Menu" asp-action="Index">Menus</a></p>
+<p><a asp-controller="Menu" asp-action="Add">Add Menus</a></p>
