--- a/src/CheeseMVC/Views/Menu/Index.cshtml
+++ b/src/CheeseMVC/Views/Menu/Index.cshtml
@@ -14,11 +14,11 @@
         <th>ID</th>
     </tr>
 
-    @foreach (var cheese in Model)
+    @foreach (var menu in Model)
     {
         <tr>
-            <td>@cheese.Name</td>
-            <td>@cheese.ID</td>
+            <td>@menu.Name</td>
+            <td>@menu.ID</td>
         </tr>
     }
 </table>
