--- a/src/CheeseMVC/Views/Category/Add.cshtml
+++ b/src/CheeseMVC/Views/Category/Add.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Add Category</h1>
 
-<form asp-controller="Cheese" asp-action="Add" method="post">
+<form asp-controller="Category" asp-action="Index" method="post">
     <div class="form-group">
         <label asp-for="Name"></label>
         <input class="form-control" asp-for="Name" />
