--- a/src/CheeseMVC/Views/Menu/AddItem.cshtml
+++ b/src/CheeseMVC/Views/Menu/AddItem.cshtml
@@ -5,8 +5,8 @@
 <h1>Add Item</h1>
 <form asp-controller="Menu" asp-action="AddItem" method="post">
     <div class="form-group">
-        <label asp-for="CheeseID"></label>
-        <select asp-for="CheeseID" asp-items="Model.Cheeses"></select>
+        <label asp-for="Cheeses"></label>
+        <select class="form-control" asp-for="CheeseID" asp-items="Model.Cheeses"></select>
         <span asp-validation-for="CheeseID"></span>
     </div>
     <input type="hidden" name="MenuID" value="@Model.Menu.ID" />
